--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
     background-color: #f2f2f2;
 }
 
+#error {
+    color: red;
+    display: none;
+}
+
 #header {
     position: fixed;
     top: 0;
